api-management/4-protect-api-infrastructure/manifests/weather-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: protect-api-infrastructure-apimanagement-weather
  namespace: apps
  annotations:
    hub.traefik.io/api: protect-api-infrastructure-apimanagement-weather
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`api.protect-infrastructure.apimanagement.docker.localhost`) && PathRegexp(`^/weather(/([0-9]+|openapi.yaml))?$`)
    kind: Rule
    services:
    - name: weather-app
      port: 3000
    middlewares:
      - name: stripprefix-weather
